<resources>
    <string name="app_name">TimClock</string>
    <string name="action_settings">Settings</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="lun">LUN</string>
    <string name="mar">MAR</string>
    <string name="mer">MER</string>
    <string name="jeu">JEU</string>
    <string name="ven">VEN</string>
    <string name="sam">SAM</string>
    <string name="dim">DIM</string>
    <string name="last_date">30</string>
    <string name="heurein">Heure d\'entrée</string>
    <string name="heureout">Heure de sortie</string>
    <string name="pause">Pause</string>
    <string name="usedefault">Utiliser les réglages par defaut</string>
    <string name="totalmois">Total Mois :</string>
    <string name="selectall">Selectionner tout par défaut</string>
    <string name="sm">SAM</string>
    <string name="dm">DIM</string>
    <string name="buttonExporter">Exporter</string>
    <string name="datein">Date début</string>
    <string name="dateout">Date fin</string>
    <string name="libelle">Libellé</string>
</resources>
