<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/camille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.someoctets.timclock.CalendarTim
                android:id="@+id/custom_cal2"
                android:layout_width="match_parent"
                android:layout_height="290dp"></com.someoctets.timclock.CalendarTim>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/strTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/totalmois"
                    tools:layout_editor_absoluteX="58dp"
                    tools:layout_editor_absoluteY="338dp" />

                <TextView
                    android:id="@+id/strTotal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/entree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/heurein"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:nextFocusRight="@id/sortie"
                        android:nextFocusDown="@id/sortie"
                        android:nextFocusForward="@id/sortie"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sortie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/heureout"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:nextFocusLeft="@id/entree"
                        android:nextFocusRight="@id/pause"
                        android:nextFocusDown="@id/pause"
                        android:nextFocusForward="@id/pause"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pause"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:nextFocusLeft="@id/sortie"
                        android:nextFocusDown="@id/fab"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>